  - Added GitHub Actions workflow and tox configuration for CI/CD
  - Added coverage reporting support

- *Project infrastructure*
  - Added comprehensive =.gitignore= file including Python cache files, build artifacts, and macOS =.DS_Store= files
  - Enhanced =pyproject.toml= with pytest configuration for better test integration

*** Changed

- Updated minimum supported Python version from 3.7 to 3.8 to ensure type annotation compatibility
  - This maintains compatibility with the Python versions used in CI/CD workflows

*** Fixed

- Added red coloring to all error and warning messages
  - All error messages now properly display in red and are sent to stderr

*** Removed

- Removed legacy =old_processor.py= file that was no longer used by the application

** [0.0.5] - 2025-11-19

*** Added

- *Enhanced configuration system*
  - Added configurable defaults for all boolean flags: =default_lemmatize=, =default_freq=, =default_context=, =default_prompt=, =default_src=
  - Added default language prompts for =base= and =en= languages
  - Implemented automatic config file creation with comprehensive defaults when none exists
  - Added dual flag system (--flag/--no-flag) allowing users to override configuration defaults
  - Added support for multi-line prompts in config using TOML multi-line string syntax

*** Changed

- *Refactored CLI flag system*
  - Updated all boolean flags to use --flag/--no-flag pattern for proper default override behavior
  - Removed the unused =default_language= configuration option from config file
  - Made language code required again since default was not properly used in workflow
  - Enhanced config loading to create default config when file doesn't exist
  - Updated default prompts to focus on Anki card generation: "Convert the following wordlist into tab separated anki cards."

*** Fixed

- Fixed CLI flag precedence system to properly allow config defaults to be overridden